Adding new product feature and register.

--- a/frontend/vinylvault/index.html
+++ b/frontend/vinylvault/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- Bootstrap JS -->
+  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./node_modules/@popperjs/core/dist/umd/popper.js"></script>
+  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-grid.min.css">
 
   <title>VinylVault by Ádám Dr. Porkoláb</title>
 </head>
@@ -93,7 +98,9 @@
     <p>© Company 2017-2018</p>
   </footer>
 
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main.ts">
+  </script>
+
 </body>
 
 </html>
